test/fixtures/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example
spec:
  to:
    kind: Service
    name: example
